crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_180_UNROM_Nichibutsu_Crazy_Climber_Japan.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-180-UNROM-Nichibutsu/Crazy Climber (Japan).zip
rom_sha256=94d030b0a327c7e4c57d1b268ed1a54b0a17418be736fd34aecd850501025b4c
frames=1141
fb_bytes=245760
cycles=33949777
audio_samples=836505
audio_fnv1a64=4ccbe0f10294c27b
checkpoint f900 fb_fnv1a64=85c7b7ecde45f3aa
checkpoint f1100 fb_fnv1a64=96f495c177e5d314
