crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_184_Sunsoft1_Atlantis_no_Nazo_Japan.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-184-Sunsoft1/Atlantis no Nazo (Japan).nes
rom_sha256=ba91bb87d51e094bc0ee3980d614d31f0ea3a6f08a1dc549fd9854f3f20b0d49
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=777b87c51a3efd8d
checkpoint f900 fb_fnv1a64=2137a0e6f045ccaa
checkpoint f1100 fb_fnv1a64=7ce024826d01d712
