crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_184_Sunsoft1_Mario_a_la_Caza_del_Tesoro_V1_0_Spanish_by_Googie_Atlantis_no_Nazo_Hack_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-184-Sunsoft1/Mario a la Caza del Tesoro V1.0 Spanish by Googie (Atlantis no Nazo Hack).zip
rom_sha256=87723abea6a2edcbb5966f5ce71f8dc2d38c32fec5988b9621675e20027951ef
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=777b87c51a3efd8d
checkpoint f900 fb_fnv1a64=6219f7765d9608ef
checkpoint f1100 fb_fnv1a64=a0a48bc0eaee0047
