crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_185_CNROM_Lock_B_Wings_J.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-185-CNROM-Lock/B-Wings (J) [!].nes
rom_sha256=40ab99e6c8aec2741503b7e69d2597fbff518ece062f78a1b028b5fac3b6b9ae
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=714a10d09a492cc4
checkpoint f900 fb_fnv1a64=a54cde4a5960b27a
checkpoint f1100 fb_fnv1a64=a54cde4a5960b27a
